tests/snapshots/yaml_suite_snapshots__yaml_suite_6LVF_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.13. Reserved Directives
  from: "http://www.yaml.org/spec/1.2/spec.html#id2781445"
  tags: spec directive header double 1.3-err
  yaml: "%FOO  bar baz # Should be ignored\n              # with a warning.\n--- \"foo\"\n"
  tree: "+STR\n +DOC ---\n  =VAL \"foo\n -DOC\n-STR\n"
  json: "\"foo\"\n"
  dump: "--- \"foo\"\n"
