tests/snapshots/yaml_suite_snapshots__yaml_suite_6LVF_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- \"foo\"\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2781445"
  json: "\"foo\"\n"
  name: Spec Example 6.13. Reserved Directives
  tags: spec directive header double 1.3-err
  tree: "+STR\n +DOC ---\n  =VAL \"foo\n -DOC\n-STR\n"
  yaml: "%FOO  bar baz # Should be ignored\n              # with a warning.\n--- \"foo\"\n"
