tests/snapshots/yaml_suite_snapshots__yaml_suite_6M2F_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Aliases in Explicit Block Mapping
  from: NimYAML tests
  tags: alias explicit-key empty-key
  yaml: "? &a a\n: &b b\n: *a\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a :a\n   =VAL &b :b\n   =VAL :\n   =ALI *a\n  -MAP\n -DOC\n-STR\n"
  dump: "&a a: &b b\n: *a\n"
