tests/snapshots/yaml_suite_snapshots__yaml_suite_6M2F_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "&a a: &b b\n: *a\n"
  from: NimYAML tests
  name: Aliases in Explicit Block Mapping
  tags: alias explicit-key empty-key
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a :a\n   =VAL &b :b\n   =VAL :\n   =ALI *a\n  -MAP\n -DOC\n-STR\n"
  yaml: "? &a a\n: &b b\n: *a\n"
