tests/snapshots/yaml_suite_snapshots__yaml_suite_6PBE_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: "---\n? - a\n  - b\n: - c\n  - d\n"
  from: "@perlpunk"
  name: Zero-indented sequences in explicit mapping keys
  tags: explicit-key mapping sequence
  tree: "+STR\n +DOC ---\n  +MAP\n   +SEQ\n    =VAL :a\n    =VAL :b\n   -SEQ\n   +SEQ\n    =VAL :c\n    =VAL :d\n   -SEQ\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\n?\n- a\n- b\n:\n- c\n- d\n"
