tests/snapshots/yaml_suite_snapshots__yaml_suite_6S55_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Invalid scalar at the end of sequence
  from: "@perlpunk"
  tags: error mapping sequence
  fail: true
  yaml: "key:\n - bar\n - baz\n invalid\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   +SEQ\n    =VAL :bar\n    =VAL :baz\n"
